--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -30,6 +30,7 @@ dependencies {
     implementation Dependencies.constraintLayout
 
     testImplementation TestDependencies.junit
+    androidTestImplementation TestDependencies.testCore
     androidTestImplementation TestDependencies.runner
     androidTestImplementation TestDependencies.espressoCore
 }
