--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation project(':domain')
     implementation Dependencies.kotlinStdlib
     implementation Dependencies.appcompat
     implementation Dependencies.constraintLayout
