--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,19 +8,23 @@ ext {
     // Test Dependencies Versions
     espressoCoreVersion = '3.1.0'
     junitVersion = '4.12'
+    mockitoVersion = '2.0.0'
     runnerVersion = '1.0.0'
+    rxKotlinVersion = '2.3.0'
     testCoreVersion = '1.0.0'
 
     Dependencies = [
             appcompat: "androidx.appcompat:appcompat:$appcompatVersion",
             constraintLayout: "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
-            kotlinStdlib: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+            kotlinStdlib: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            rxKotlin: "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
     ]
 
 
     TestDependencies = [
             espressoCore: "androidx.test.espresso:espresso-core:$espressoCoreVersion",
             junit: "junit:junit:$junitVersion",
+            mockito:  "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoVersion",
             runner: "androidx.test.ext:junit:$runnerVersion",
             testCore: "androidx.test:core:$testCoreVersion"
     ]
