--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,11 +3,15 @@ ext {
     // Dependencies Versions
     appcompatVersion = '1.0.0'
     constraintLayoutVersion = '1.1.2'
+    daggerVersion = '2.19'
+    daggerCompilerVersion = '2.19'
     gsonVersion = '2.8.5'
     gsonConverterVersion = '2.5.0'
     kotlinVersion = '1.3.10'
     okhttpVersion = '3.12.0'
     okhttpLoggingVersion = '3.12.0'
+    picassoVersion = '2.71828'
+    recyclerViewVersion = '1.0.0'
     retrofit = '2.5.0'
     retrofitRxAdapterVersion = '2.5.0'
 
@@ -22,11 +26,15 @@ ext {
     Dependencies = [
             appcompat: "androidx.appcompat:appcompat:$appcompatVersion",
             constraintLayout: "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
+            dagger: "com.google.dagger:dagger:$daggerVersion",
+            daggerCompiler: "com.google.dagger:dagger-compiler:$daggerCompilerVersion",
             gson: "com.google.code.gson:gson:$gsonVersion",
             gsonConverter: "com.squareup.retrofit2:converter-gson:$gsonConverterVersion",
             kotlinStdlib: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion",
             okhttp: "com.squareup.okhttp3:okhttp:$okhttpVersion",
             okhttpLogging: "com.squareup.okhttp3:logging-interceptor:$okhttpLoggingVersion",
+            picasso: "com.squareup.picasso:picasso:$picassoVersion",
+            recyclerView: "androidx.recyclerview:recyclerview:$recyclerViewVersion",
             retrofit: "com.squareup.retrofit2:retrofit:$retrofit",
             retrofitRxAdapter: "com.squareup.retrofit2:adapter-rxjava2:$retrofitRxAdapterVersion",
             rxKotlin: "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
